@@ -62,3 +62,7 @@ configErrorMaxRuntimeBig1 = "Wrong configuration for: 'runtime => maxRuntime'! M
 configErrorMaxRuntimeBig2 = "The configured setting was not applied!"
 configErrorMaxStepNumber = "Wrong configuration for: 'backtraceAndError => maxStepNumber'! Expected integer. The configured setting was not applied!"
 maxStepNumber = "A backtrace tends to produce a lot of output, and browsers tend to have problems with more than 100MB output in HTML text. Normally it is not unneccessary to go back more than 10 steps, but if you need to, you can increase this number here."
+emergencyTimer = "Emergency break due to extensive run time!"
+emergencyMemory = "Emergency break due to extensive memory usage!"
+fileserviceDelete = "Unable to delete file: "
+chunkserviceAccess = "Could not access chunk file: "
