@@ -22,6 +22,7 @@
 - Bugfix: Removed the multiple escaping of inherited comments.
 - Bugfix: Use the filepath filter in the method and function
   analysis
+- Bugfix: Made use of the language file (nearly) everywhere.
 
 2.2.0
 - Added more search pattern and source code parsing to the
